test/functions/deitz/iterators/test_no_yield.good
test_no_yield.chpl:3: syntax error: syntax error near ';'
